# RAG_for_your_document

./: .gitignore  README.md  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
vector_store/: chroma.sqlite3  conversation_history.json
